cabal-version: 1.12
Name: control-monad-omega
Description:
    A monad for enumerating sets: like the list
    monad but breadth-first.
Version: 0.3.1
Stability: experimental
Synopsis: A breadth-first list monad.
License: PublicDomain
Category: Control
Homepage: http://github.com/luqui/control-monad-omega
Author: Luke Palmer
Maintainer: lrpalmer@gmail.com
Build-Type: Simple
Tested-With:
  GHC ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.6
   || ==9.8.2
   || ==9.10.1

library
  Default-Language: Haskell2010
  Build-Depends: base >=4.10 && <5
  Exposed-Modules: Control.Monad.Omega
  Other-Extensions: CPP

test-suite omega-tests
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  build-depends:
    base,
    control-monad-omega,
    tasty,
    tasty-quickcheck
  hs-source-dirs: test
  main-is: Properties.hs

benchmark omega-bench
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  build-depends:
    base,
    control-monad-omega,
    tasty-bench
  hs-source-dirs: bench
  main-is: Bench.hs
